# NOVA

./: .gitignore  README.md
nebulastream/: .clang-format  .clang-tidy  .dockerignore  .gitignore  .no-license-check  .project  CHANGELOG.md  CHECKLIST.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  RELEASE_NOTES.md  clang_suppressions.txt
nebulastream/.github/: PULL_REQUEST_TEMPLATE.md  reviewer-lottery.yml
nebulastream/.github/ISSUE_TEMPLATE/: config.yml  nebulastream_bug_report.yml  nebulastream_docs.yml  nebulastream_enhancements.yml  nebulastream_feature_request.yml
nebulastream/.github/workflows/: github_benchmark.yml  github_ci.yml  github_elegant.yml  github_release.yml  github_reviewer_lottery.yml  stale.yml
nebulastream/cmake/: CodeCoverage.cmake  FindAVX.cmake  FindNUMA.cmake  FindPAPI.cmake  FindTBB.cmake  Findcppkafka.cmake  Findcpr.cmake  GuardOnce.cmake  ImportDependencies.cmake  LLVMIRUtil.cmake  NebulaStreamConfig.cmake.in  NebulaStreamTest.cmake  Sanitizers.cmake  UseCCache.cmake  flatten.cmake  macros.cmake
nebulastream/cmake/docs/: CMakeLists.txt  Doxyfile.in  doxygen-awesome.css
nebulastream/cmake/release/: PushTag.cmake
nebulastream/cmake/semver/: GetSemanticVersion.cmake  UpdateVersion.cmake  version.hpp.in
nebulastream/config/: coordinator.yaml  worker.yaml
nebulastream/docker/: README.md
nebulastream/docker/buildImage/: Dockerfile-NES-Build  Dockerfile-NES-Build-ubuntu-18_04  Dockerfile-NES-Build-ubuntu-20_04  Dockerfile-NES-Build-ubuntu-22_04  Dockerfile-NES-Build-ubuntu-24_04  entrypoint-nes-benchmark.sh  entrypoint-nes-build-cc.sh  entrypoint-nes-build-format-check.sh  entrypoint-nes-build-guard-check.sh  entrypoint-nes-build-macos.sh  entrypoint-nes-build-preamble-check.sh  entrypoint-nes-build.sh  entrypoint-nes-ccache-build-cleanup.sh  entrypoint-nes-release.sh  entrypoint-nes-run-tests.sh  entrypoint-prepare-nes-package.sh
nebulastream/docker/devImage/: Dockerfile-NES-Dev  install-profiler.sh
nebulastream/docker/executableImage/: Dockerfile-NES-Executable-Multi-Arch  entrypoint-containernet.sh  entrypoint-nes-executable.sh
nebulastream/docker/regressionImage/: run.sh
nebulastream/docker/regressionImage/KTM/: 0917-619-30-s.csv  coordinator.yml  worker-1.yml
nebulastream/docker/regressionImage/Med/: coordinator.yml  docker-compose.yml  worker-1.yml
nebulastream/docker/regressionImage/SmartMeter/: docker-compose.yml
nebulastream/docker/regressionImage/Video/: coordinator.yml  docker-compose.yml  transc_data_1.csv  worker-1.yml
nebulastream/docker/scripts/: kafka-setup.sh
nebulastream/docker/staticAnalysisImage/: Dockerfile-NES-StaticAnalysis-ubuntu-22_04  entrypoint-nes-static-analysis.sh
nebulastream/grpc/: CoordinatorRPCService.proto  Health.proto  JavaUdfDescriptorMessage.proto  SerializableDataType.proto  SerializableDecomposedQueryPlan.proto  SerializableExpression.proto  SerializableOperator.proto  SerializableQueryPlan.proto  SerializableSchema.proto  StatisticWindowDescriptorMessage.proto  UdfCatalogService.proto  WorkerLocation.proto  WorkerRPCService.proto
nebulastream/nes-benchmark/: CMakeLists.txt
nebulastream/nes-benchmark/configs/: KafkaYSBQuery.yaml
nebulastream/nes-benchmark/include/: Measurements.hpp
nebulastream/nes-benchmark/scripts/: runAllE2EBenchmarkConfigs.sh
nebulastream/nes-benchmark/src/: CMakeLists.txt  Measurements.cpp
nebulastream/nes-benchmark/test/: CMakeLists.txt
nebulastream/nes-catalogs/: CMakeLists.txt
nebulastream/nes-catalogs/src/: CMakeLists.txt
nebulastream/nes-catalogs/tests/: CMakeLists.txt
nebulastream/nes-client/: CMakeLists.txt
nebulastream/nes-client/src/: CMakeLists.txt
nebulastream/nes-client/tests/: CMakeLists.txt
nebulastream/nes-common/: CMakeLists.txt
nebulastream/nes-common/include/: PrecompiledHeaders.hpp  StatisticIdentifiers.hpp
nebulastream/nes-common/src/: CMakeLists.txt
nebulastream/nes-common/tests/: CMakeLists.txt
nebulastream/nes-compiler/: CMakeLists.txt
nebulastream/nes-compiler/src/: CMakeLists.txt
nebulastream/nes-compiler/tests/: CMakeLists.txt
nebulastream/nes-configurations/: CMakeLists.txt
nebulastream/nes-configurations/tests/: CMakeLists.txt
nebulastream/nes-coordinator/: CMakeLists.txt
nebulastream/nes-coordinator/src/: CMakeLists.txt
nebulastream/nes-coordinator/tests/: CMakeLists.txt
nebulastream/nes-data-types/: CMakeLists.txt
nebulastream/nes-data-types/src/: CMakeLists.txt
nebulastream/nes-data-types/tests/: CMakeLists.txt
nebulastream/nes-execution/: CMakeLists.txt
nebulastream/nes-execution/benchmark/: CMakeLists.txt
nebulastream/nes-execution/src/: CMakeLists.txt
nebulastream/nes-execution/tests/: CMakeLists.txt
nebulastream/nes-expressions/: CMakeLists.txt
nebulastream/nes-expressions/src/: CMakeLists.txt
nebulastream/nes-nautilus/: CMakeLists.txt
nebulastream/nes-nautilus/tests/: CMakeLists.txt
nebulastream/nes-operators/: CMakeLists.txt
nebulastream/nes-operators/src/: CMakeLists.txt
nebulastream/nes-operators/tests/: CMakeLists.txt
nebulastream/nes-optimizer/: CMakeLists.txt
nebulastream/nes-optimizer/src/: CMakeLists.txt
nebulastream/nes-optimizer/tests/: CMakeLists.txt
nebulastream/nes-plugins/: CMakeLists.txt  PathConfig.h.in  README.md
nebulastream/nes-plugins/arrow/: CMakeLists.txt
nebulastream/nes-plugins/cuda/: CMakeLists.txt
nebulastream/nes-plugins/onnx/: CMakeLists.txt  ImportONNX.cmake
nebulastream/nes-plugins/tensorflow/: CMakeLists.txt
nebulastream/nes-runtime/: CMakeLists.txt
nebulastream/nes-runtime/src/: CMakeLists.txt
nebulastream/nes-runtime/tests/: CMakeLists.txt
nebulastream/nes-statistics/: CMakeLists.txt
nebulastream/nes-statistics/src/: CMakeLists.txt
nebulastream/nes-window-types/: CMakeLists.txt
nebulastream/nes-window-types/src/: CMakeLists.txt
nebulastream/nes-worker/: CMakeLists.txt
nebulastream/nes-worker/src/: CMakeLists.txt
nebulastream/nes-worker/tests/: CMakeLists.txt
nebulastream/scripts/: check_cleanup.sh  check_license.py  run_clang_format.py
notebooks/: ASimulations_A.ipynb  (+8 more)
(+3229 files in other folders)
