# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#    https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Set Sources and Headers
add_subdirectory(src)

get_source(nes-catalogs NES_CATALOGS_SOURCE_FILES)

# Add Library
add_library(nes-catalogs ${NES_CATALOGS_SOURCE_FILES})
target_link_libraries(nes-catalogs PUBLIC nes-operators)
target_include_directories(nes-catalogs PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/nebulastream/>)


# Find folly
find_package(folly CONFIG REQUIRED)
target_link_libraries(nes-catalogs PRIVATE folly::folly)

if (NES_ENABLES_TESTS)
    # Add tests with command
    add_subdirectory(tests)
    message(STATUS "Tests are enabled")
else ()
    message(STATUS "Tests are disabled")
endif ()

#Add the nes common and headers to cpack
install(TARGETS nes-catalogs
        EXPORT NebulaStreamTargets
        COMPONENT nesLibrary
        DESTINATION lib)